se han guardado los últimos cambios

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Robótica</title>
+</head>
 <body>
-
-<h2>Robótica</h2>
+    <h2>Robótica</h2>
     <p>La robótica es la rama de la ingeniería mecánica, de la ingeniería eléctrica, de la ingeniería electrónica, de la ingeniería biomédica, y de las ciencias de la computación, que se ocupa del diseño, construcción, operación, estructura, manufactura, y aplicación de los robots.</p>
     <p>La robótica combina diversas disciplinas como la mecánica, la electrónica, la informática, la inteligencia artificial, la ingeniería de control y la física.3​ Otras áreas importantes en robótica son el álgebra, los autómatas programables, la animatrónica y las máquinas de estados.</p>
-    <p>El término robot se popularizó con el éxito de la obra R.U.R. (Robots Universales Rossum), escrita por <a href="https://es.wikipedia.org/wiki/Karel_%C4%8Capek">Karel Čapek</a> en 1920. En la traducción al inglés de dicha obra la palabra checa robota, que significa trabajos forzados o trabajador, fue traducida al inglés como robot.</p>
+    <p>El término robot se popularizó con el éxito de la obra R.U.R. (Robots Universales Rossum), escrita por <a href="https://es.wikipedia.org/wiki/Karel_%C4%8Capek" target="_blank">Karel Čapek</a> en 1920. En la traducción al inglés de dicha obra la palabra checa robota, que significa trabajos forzados o trabajador, fue traducida al inglés como robot.</p>
 <hr>
 <h3>Índice</h3>
     <ol>
@@ -20,7 +25,7 @@
 <hr>
 <h2 id="H1">Historia de la robótica</h2>
     <p>La robótica va unida a la construcción de "artefactos" que trataban de materializar el deseo humano de crear seres a su semejanza y que al mismo tiempo lo descargasen de trabajos tediosos o peligrosos. El ingeniero español <a href="https://es.wikipedia.org/wiki/Leonardo_Torres_Quevedo">Leonardo Torres Quevedo</a> (que construyó el primer mando a distancia para su automóvil mediante telegrafía, el ajedrecista automático, el primer transbordador aéreo y otros muchos ingenios), acuñó el término "automática" en relación con la teoría de la automatización de tareas tradicionalmente asociadas.</p>
-    <p><a href="https://es.wikipedia.org/wiki/Karel_%C4%8Capek">Karel Čapek</a>, un escritor checo, acuñó en 1920 el término "robot" en su obra dramática Rossum's Universal Robots / R.U.R., a partir de la palabra checa robota, que significa servidumbre o trabajo forzado. El término robótica es acuñado por Isaac Asimov, definiendo a la ciencia que estudia a los robots. Asimov creó también las tres leyes de la robótica. En la ciencia ficción el hombre ha imaginado a los robots visitando nuevos mundos, haciéndose con el poder o, simplemente, aliviando de las labores caseras.</p>
+    <p><a href="https://es.wikipedia.org/wiki/Karel_%C4%8Capek" target="_blank">Karel Čapek</a>, un escritor checo, acuñó en 1920 el término "robot" en su obra dramática Rossum's Universal Robots / R.U.R., a partir de la palabra checa robota, que significa servidumbre o trabajo forzado. El término robótica es acuñado por Isaac Asimov, definiendo a la ciencia que estudia a los robots. Asimov creó también las tres leyes de la robótica. En la ciencia ficción el hombre ha imaginado a los robots visitando nuevos mundos, haciéndose con el poder o, simplemente, aliviando de las labores caseras.</p>
 
 <table border="1" style="width:100%">
 <tr>
@@ -110,3 +115,5 @@
     <li><b>Híbridos</b></li>
         <p>Estos robots corresponden a aquellos de difícil clasificación, cuya estructura se sitúa en combinación con alguna de las anteriores ya expuestas, bien sea por conjunción o por yuxtaposición. Por ejemplo, un dispositivo segmentado articulado y con ruedas es, al mismo tiempo, uno de los atributos de los robots móviles y de los robots zoomórficos.</p>
     </ul>
+</body>
+</html>
