--- a/referencias.html
+++ b/referencias.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Robótica - Referencias</title>
+    <!-- BOOTSTRAP CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="css/main.css">
+</head>
 <body>
+    <!-- NAVEGACIÓN-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+        <a class="navbar-brand" href="/"><img src="Imagenes/robot-solid.png" alt="robot" style="width: 7%;">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                <a class="nav-link" href="http://127.0.0.1:5500/clasificacion.html">Clasificación</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:5500/vease-tambien.html">Véase También</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:5500/referencias.html">Referencias</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- HEADER -->
+    <header class="main-header">
+        <div class="background-overlay text-black py-5">
+            <div class="container">
     <h2>Referencias</h2>
     <ol>
         <li><a href="https://dle.rae.es/rob%2525C3%2525B3tica" target="_blank">«Definición de robótica - RAE»</a>. Consultado el 2 de diciembre de 2008.</li>
         <li>«Definición de robótica - roboticspot.com». Consultado el 2 de diciembre de 2008.</li>
-        <li><a href="https://web.archive.org/web/20070830231418/http://content.monster.com/articles/3472/18567/1/industry/12/home.aspx" target="_blak">«Industry Spotlight: Robotics from Monster Career Advice»</a>. Archivado desde el original el 30 de agosto de 2007. Consultado el 26 de agosto de 2007.</li>
+        <li><a href="https://web.archive.org/web/20070830231418/http://content.monster.com/articles/3472/18567/1/industry/12/home.aspx" target="_blank">«Industry Spotlight: Robotics from Monster Career Advice»</a>. Archivado desde el original el 30 de agosto de 2007. Consultado el 26 de agosto de 2007.</li>
         <li>Bermejo, Sergi (2003). <i><a href="https://books.google.com.ar/books?id=d9_3mg15uAsC&redir_esc=y&hl=es" target="_blank">Desarrollo de robots basados en el comportamiento</a></i>. Ediciones UPC. ISBN 84-8301-712-1. Págs. 26-27.</li>
     </ol>
+    </div>
+    </div>
 </body>
+</html>
