--- a/vease-tambien.html
+++ b/vease-tambien.html
@@ -1,6 +1,40 @@
 <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Robótica - Véase También</title>
+    <!-- BOOTSTRAP CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="css/main.css">
+</head>
 <body>
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+        <a class="navbar-brand" href="/"><img src="Imagenes/robot-solid.png" alt="robot" style="width: 7%;">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                <a class="nav-link" href="http://127.0.0.1:5500/clasificacion.html">Clasificación</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:5500/vease-tambien.html">Véase También</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:5500/referencias.html">Referencias</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- HEADER -->
+    <header class="main-header">
+        <div class="background-overlay text-black py-5">
+            <div class="container">
     <h2>Véase También</h2>
     <ul>
         <li><a href="#B1">Bot</a></li>
@@ -68,3 +102,4 @@
             <strong>Carrera de bípedos.</strong>
             <p>Mientras que en las competencias mencionadas anteriormente los robot suelen tener una estructura rodada, en la carrera de bípedos se enfrentan robots cuyo movimiento utiliza dos extremidades inferiores (análogas a las extremidades inferiores de los animales bípedos). Los robots compiten en una línea recta, siendo el ganador el robot que atraviese el recorrido definido primero.</p>
 </body>
+</html>
