--- a/index.html
+++ b/index.html
@@ -3,117 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robótica</title>
+    <title>Robótica - Inicio</title>
+    <!-- BOOTSTRAP CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- CSS CUSTOMIZADO -->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h2>Robótica</h2>
-    <p>La robótica es la rama de la ingeniería mecánica, de la ingeniería eléctrica, de la ingeniería electrónica, de la ingeniería biomédica, y de las ciencias de la computación, que se ocupa del diseño, construcción, operación, estructura, manufactura, y aplicación de los robots.</p>
-    <p>La robótica combina diversas disciplinas como la mecánica, la electrónica, la informática, la inteligencia artificial, la ingeniería de control y la física.3​ Otras áreas importantes en robótica son el álgebra, los autómatas programables, la animatrónica y las máquinas de estados.</p>
-    <p>El término robot se popularizó con el éxito de la obra R.U.R. (Robots Universales Rossum), escrita por <a href="https://es.wikipedia.org/wiki/Karel_%C4%8Capek" target="_blank">Karel Čapek</a> en 1920. En la traducción al inglés de dicha obra la palabra checa robota, que significa trabajos forzados o trabajador, fue traducida al inglés como robot.</p>
-<hr>
-<h3>Índice</h3>
-    <ol>
-        <li><a href="#H1">Historia de la Robótica</a></li>
-        <li><a href="#C1">Clasificación de los Robots</a></li>
-        <ul>
-            <li><a href="#S1">Según su cronología</a></li>
-            <li><a href="#S2">Según su Estructura</a></li>
+    <!-- NAVEGACIÓN -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+        <a class="navbar-brand" href="/"><img src="Imagenes/robot-solid.png" alt="robot" style="width: 7%;">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                <a class="nav-link" href="http://127.0.0.1:5500/clasificacion.html">Clasificación</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:5500/vease-tambien.html">Véase También</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:5500/referencias.html">Referencias</a>
+                </li>
             </ul>
-        <li><a href="vease-tambien.html">Véase también</a></li>
-        <li><a href="referencias.html">Referencias</a></li>
-    </ol>
-<hr>
-<h2 id="H1">Historia de la robótica</h2>
-    <p>La robótica va unida a la construcción de "artefactos" que trataban de materializar el deseo humano de crear seres a su semejanza y que al mismo tiempo lo descargasen de trabajos tediosos o peligrosos. El ingeniero español <a href="https://es.wikipedia.org/wiki/Leonardo_Torres_Quevedo">Leonardo Torres Quevedo</a> (que construyó el primer mando a distancia para su automóvil mediante telegrafía, el ajedrecista automático, el primer transbordador aéreo y otros muchos ingenios), acuñó el término "automática" en relación con la teoría de la automatización de tareas tradicionalmente asociadas.</p>
-    <p><a href="https://es.wikipedia.org/wiki/Karel_%C4%8Capek" target="_blank">Karel Čapek</a>, un escritor checo, acuñó en 1920 el término "robot" en su obra dramática Rossum's Universal Robots / R.U.R., a partir de la palabra checa robota, que significa servidumbre o trabajo forzado. El término robótica es acuñado por Isaac Asimov, definiendo a la ciencia que estudia a los robots. Asimov creó también las tres leyes de la robótica. En la ciencia ficción el hombre ha imaginado a los robots visitando nuevos mundos, haciéndose con el poder o, simplemente, aliviando de las labores caseras.</p>
-
-<table border="1" style="width:100%">
-<tr>
-    <th>Fecha</th>
-    <th colspan="1">Importancia</th>
-    <th colspan="1">Nombre del Robot</th>
-    <th colspan="1">Inventor</th>
-</tr>
-<tr>
-    <th rowspan="1">1961</th>
-    <td>Se instala el primer robot industrial.</td>
-    <td>Unimate</td>
-    <td>George Devol</td>
-</tr>
-<tr>
-    <th rowspan="1">1963</th>
-    <td>Primer robot "palletizing."</td>
-</tr>
-<tr>
-    <th rowspan="1">1971</th>
-    <td>El primer robot soviético que aterriza exitosamente en la superficie de Marte pero se perdió el contacto pocos segundos después.</td>
-    <td>Mars 3, dentro del programa Mars</td>
-    <td>Unión Soviética</td>
-</tr>
-<tr>
-    <th rowspan="1">1973</th>
-    <td>Primer robot con seis ejes electromecánicos.</td>
-    <td>Famulus</td>
-    <td>KUKA Robot Group</td>
-</tr>
-<tr>
-    <th rowspan="1">1975</th>
-    <td>Brazo manipulador programable universal, un producto de Unimation.</td>
-    <td>PUMA</td>
-    <td>Victor Scheinman</td>
-</tr>
-<tr>
-    <th rowspan="1">1976</th>
-    <td>Primer robot estadounidense en Marte.</td>
-    <td>Viking I</td>
-    <td>NASA</td>
-</tr>
-<tr>
-    <th rowspan="1">1982</th>
-    <td>El robot completo (The Complete Robot en inglés). Una colección de cuentos de ciencia ficción de Isaac Asimov, escritos entre 1940 y 1976, previamente publicados en el libro Yo, robot y en otras antologías, volviendo a explicar las tres leyes de la robótica con más ahínco y complejidad moral. Incluso llega a plantear la muerte de un ser humano por la mano de un robot con las tres leyes programadas, por lo que decide incluir una cuarta ley "la ley 0 (cero)."</td>
-    <td>Robbie, SPD-13 (Speedy), QT1 (Cutie), DV-5 (Dave), RB-34 (Herbie), NS-2 (Néstor), NDR (Andrew), Daneel Olivaw</td>
-    <td>Isaac Asimov</td>
-</tr>
-<tr>
-    <th rowspan="1">2011</th>
-    <td>Robot humanoide capaz de desplazarse de forma bípeda e interactuar con las personas.</td>
-    <td>ASIMO</td>
-    <td>Honda Motor Co. Ltd</td>
-</tr>
-<tr>
-    <th rowspan="1">2015</th>
-    <td>Robot humanoide ginoide capaz de reconocer, recordar caras y simular expresiones.</td>
-    <td>Sophia</td>
-    <td>Hanson Robotics Co. Ltd</td>
-</tr>
-</table>
-<hr>
-<h2 id="C1">Clasificación de los Robots</h2>
-    <strong id="S1">Según su cronología</strong>
-    <p>La que a continuación se presenta es la clasificación más común:</p>
-<ul>
-    <li><b>1.ª Generación.</b></li>
-        <p>Robots manipuladores. Son sistemas mecánicos multifuncionales con un sencillo sistema de control, bien manual, de secuencia fija o de secuencia variable.</p>
-        
-    <li><b>2.ª Generación.</b></li>
-        <p>Robots de aprendizaje. Repiten una secuencia de movimientos que ha sido ejecutada previamente por un operador humano. El modo de hacerlo es a través de un dispositivo mecánico. El operador realiza los movimientos requeridos mientras el robot le sigue y los memoriza.</p>
-        
-    <li><b>3.ª Generación.</b></li>
-        <p>Robots con control sensorizado. El controlador es un ordenador que ejecuta las órdenes de un programa y las envía al manipulador o robot para que realice los movimientos necesarios.</p>
-</ul>
-    <strong id="S2">Según su estructura</strong>
-    <p>La estructura es definida por el tipo de configuración general del robot, puede ser metamórfica. El concepto de metamorfismo, de reciente aparición, se ha introducido para incrementar la flexibilidad funcional de un robot a través del cambio de su configuración por el propio robot. El metamorfismo admite diversos niveles, desde los más elementales (cambio de herramienta o de efecto terminal), hasta los más complejos como el cambio o alteración de algunos de sus elementos o subsistemas estructurales. Los dispositivos y mecanismos que pueden agruparse bajo la denominación genérica del robot, tal como se ha indicado, son muy diversos y es por tanto difícil establecer una clasificación coherente de los mismos que resista un análisis crítico y riguroso. La subdivisión de los robots, con base en su arquitectura, se hace en los siguientes grupos: poliarticulados, móviles, androides, zoomórficos e híbridos.</p>
-<ul>
-    <li><b>Poliarticulados</b></li>
-        <p>En este grupo se encuentran los robots de muy diversa forma y configuración, cuya característica común es la de ser básicamente sedentarios (aunque excepcionalmente pueden ser guiados para efectuar desplazamientos limitados) y estar estructurados para mover sus elementos terminales en un determinado espacio de trabajo según uno o más sistemas de coordenadas, y con un número limitado de grados de libertad. En este grupo se encuentran los robots manipuladores, los robots industriales y los robots cartesianos, que se emplean cuando es preciso abarcar una zona de trabajo relativamente amplia o alargada, actuar sobre objetos con un plano de simetría vertical o reducir el espacio ocupado en el suelo.</p>
-    <li><b>Móviles</b></li>
-        <p>Son Robots con gran capacidad de desplazamiento, basados en carros o plataformas y dotados de un sistema locomotor de tipo rodante. Siguen su camino por telemando o guiándose por la información recibida de su en torno a través de sus sensores. Estos robots aseguran el transporte de piezas de un punto a otro de una cadena de fabricación. Guiados mediante pistas materializadas a través de la radiación electromagnética de circuitos empotrados en el suelo, o a través de bandas detectadas fotoeléctricamente, pueden incluso llegar a sortear obstáculos y están dotados de un nivel relativamente elevado de inteligencia.</p>
-    <li><b>Androides</b></li>
-        <p>Son los tipos de robots que intentan reproducir total o parcialmente la forma y el comportamiento cinemático del ser humano. Actualmente, los androides son todavía dispositivos muy poco evolucionados y sin utilidad práctica, y destinados, fundamentalmente, al estudio y experimentación. Uno de los aspectos más complejos de estos robots, y sobre el que se centra la mayoría de los trabajos, es el de la locomoción bípeda. En este caso, el principal problema es controlar dinámica y coordinadamente en el tiempo real el proceso y mantener simultáneamente el equilibrio del Robot. Vulgarmente se los suele llamar "marionetas" cuando se les ven los cables que permiten ver cómo realiza sus procesos.</p>
-    <li><b>Zoomórficos</b></li>
-        <p>Los robots zoomórficos, que considerados en sentido no restrictivo podrían incluir también a los androides, constituyen una clase caracterizada principalmente por sus sistemas de locomoción que imitan a los diversos seres vivos. A pesar de la disparidad morfológica de sus posibles sistemas de locomoción es conveniente agrupar a los Robots zoomórficos en dos categorías principales: caminadores y no caminadores. El grupo de los robots zoomórficos no caminadores está muy poco evolucionado. Los experimentos efectuados en Japón basados en segmentos cilíndricos biselados acoplados axialmente entre sí y dotados de un movimiento relativo de rotación. Los Robots zoomórficos caminadores multípedos son muy numerosos y están siendo objeto de experimentos en diversos laboratorios con vistas al desarrollo posterior de verdaderos vehículos terrenos, pilotados o autónomos, capaces de evolucionar en superficies muy accidentadas. Las aplicaciones de estos robots serán interesantes en el campo de la exploración espacial y en el estudio de los volcanes.</p>
-    <li><b>Híbridos</b></li>
-        <p>Estos robots corresponden a aquellos de difícil clasificación, cuya estructura se sitúa en combinación con alguna de las anteriores ya expuestas, bien sea por conjunción o por yuxtaposición. Por ejemplo, un dispositivo segmentado articulado y con ruedas es, al mismo tiempo, uno de los atributos de los robots móviles y de los robots zoomórficos.</p>
-    </ul>
+        </div>
+    </nav>
+    <!-- HEADER -->
+    <header class="main-header">
+        <div class="background-overlay text-black py-5">
+            <div class="container"> 
+                    <h2>Robótica</h2>
+                        <p>La robótica es la rama de la ingeniería mecánica, de la ingeniería eléctrica, de la ingeniería electrónica, de la ingeniería biomédica, y de las ciencias de la computación, que se ocupa del diseño, construcción, operación, estructura, manufactura, y aplicación de los robots.</p>
+                        <p>La robótica combina diversas disciplinas como la mecánica, la electrónica, la informática, la inteligencia artificial, la ingeniería de control y la física.3​ Otras áreas importantes en robótica son el álgebra, los autómatas programables, la animatrónica y las máquinas de estados.</p>
+                        <p>El término robot se popularizó con el éxito de la obra R.U.R. (Robots Universales Rossum), escrita por <a href="https://es.wikipedia.org/wiki/Karel_%C4%8Capek" target="_blank">Karel Čapek</a> en 1920. En la traducción al inglés de dicha obra la palabra checa robota, que significa trabajos forzados o trabajador, fue traducida al inglés como robot.</p>
+                    <h2>Historia de la robótica</h2>
+                        <p>La robótica va unida a la construcción de "artefactos" que trataban de materializar el deseo humano de crear seres a su semejanza y que al mismo tiempo lo descargasen de trabajos tediosos o peligrosos. El ingeniero español <a href="https://es.wikipedia.org/wiki/Leonardo_Torres_Quevedo">Leonardo Torres Quevedo</a> (que construyó el primer mando a distancia para su automóvil mediante telegrafía, el ajedrecista automático, el primer transbordador aéreo y otros muchos ingenios), acuñó el término "automática" en relación con la teoría de la automatización de tareas tradicionalmente asociadas.</p>
+                        <p><a href="https://es.wikipedia.org/wiki/Karel_%C4%8Capek" target="_blank">Karel Čapek</a>, un escritor checo, acuñó en 1920 el término "robot" en su obra dramática Rossum's Universal Robots / R.U.R., a partir de la palabra checa robota, que significa servidumbre o trabajo forzado. El término robótica es acuñado por Isaac Asimov, definiendo a la ciencia que estudia a los robots. Asimov creó también las tres leyes de la robótica. En la ciencia ficción el hombre ha imaginado a los robots visitando nuevos mundos, haciéndose con el poder o, simplemente, aliviando de las labores caseras.</p>
+                    <a href="http://127.0.0.1:5500/tabla.html" class="btn btn-dark btn-lg text-black">Leer Más</a>
+            </div>
+        </div>
+    </header>
+    <!-- FORMULARIO-->
+    <section class="bg-dark text-white py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <input type="text" class="form-control form-control-lg" placeholder="Ingrese su Nombre">
+                </div>
+                <div class="col-md-4">
+                    <input type="email" class="form-control form-control-lg" placeholder="Ingrese su E-mail">
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-light btn-lg btn-block">
+                Suscribete
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
